[package]
name = "spsc-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.17", default-features = false }
cache-padded = { version = "1.1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
tokio = {version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros"]}
futures-executor = "0.3.17"

[[bench]]
name = "spsc_bench"
harness = false